# doom3-source-review

./: README.txt
doom3-src/: .gitignore
doom3-src/neo/: CMakeLists.txt  SConstruct
doom3-src/neo/cm/: CollisionModel_load.cpp
doom3-src/neo/cmake_modules/: FindVorbis.cmake
doom3-src/neo/d3xp/: AF.cpp  AFEntity.cpp  Entity.cpp  Game_local.cpp  Game_network.cpp  IK.cpp  Item.cpp  Item.h  MultiplayerGame.cpp  Player.cpp  PlayerView.cpp  SmokeParticles.cpp  Target.cpp  Trigger.cpp  Weapon.cpp
doom3-src/neo/d3xp/ai/: AAS_routing.cpp  AI.cpp  AI_events.cpp
doom3-src/neo/d3xp/anim/: Anim.cpp
doom3-src/neo/d3xp/gamesys/: Class.h  Event.h  SysCmds.cpp
doom3-src/neo/d3xp/physics/: Clip.cpp  Physics_AF.cpp  Push.cpp
doom3-src/neo/d3xp/script/: Script_Compiler.h  Script_Program.cpp
doom3-src/neo/framework/: BuildVersion.h  Common.cpp  Console.cpp  FileSystem.cpp
doom3-src/neo/game/: AF.cpp  Entity.cpp  Item.cpp  MultiplayerGame.cpp
doom3-src/neo/game/ai/: AAS_routing.cpp  AI.cpp  AI_events.cpp
doom3-src/neo/game/anim/: Anim.cpp
doom3-src/neo/game/gamesys/: Callbacks.cpp  Class.cpp  Class.h  Event.cpp  Event.h  SysCmds.cpp
doom3-src/neo/game/physics/: Clip.cpp
doom3-src/neo/game/script/: Script_Compiler.cpp  Script_Compiler.h  Script_Interpreter.cpp  Script_Interpreter.h  Script_Program.cpp  Script_Program.h  Script_Thread.cpp
doom3-src/neo/idlib/: Base64.cpp  Base64.h  BitMsg.cpp  Dict.cpp  Heap.cpp  Heap.h  LangDict.cpp  Parser.cpp  precompiled.h
doom3-src/neo/idlib/geometry/: Surface.cpp
doom3-src/neo/idlib/math/: Math.h  Matrix.cpp  Matrix.h  Simd.cpp  Simd.h  Vector.cpp  Vector.h
doom3-src/neo/jpeg/: jmemdatasrc.c  jmemdatasrc.h
doom3-src/neo/renderer/: Cinematic.cpp  Image.h  Image_files.cpp  Image_init.cpp  Interaction.cpp  MegaTexture.cpp  ModelDecal.cpp  Model_lwo.cpp  RenderSystem.cpp  RenderSystem_init.cpp  RenderWorld.cpp  VertexCache.cpp  VertexCache.h  draw_common.cpp  tr_font.cpp  tr_light.cpp  tr_local.h  tr_subview.cpp  tr_trisurf.cpp
doom3-src/neo/sound/: snd_decoder.cpp  snd_system.cpp  snd_world.cpp
doom3-src/neo/sys/: git_hash.cpp.in  sys_public.h
doom3-src/neo/sys/linux/: main.cpp  sound.cpp  sound_alsa.cpp
doom3-src/neo/sys/posix/: posix_main.cpp
doom3-src/neo/sys/scons/: SConscript.core
doom3-src/neo/tools/compilers/roqvq/: codec.cpp  roq.cpp  roq.h  roqParam.cpp
doom3-src/neo/ui/: SimpleWindow.cpp  SimpleWindow.h  Window.cpp  Window.h
